--- a/styles/globals.css
+++ b/styles/globals.css
@@ -160,7 +160,7 @@ border: 1px solid black!important;
   .sign-in-style{
     height: 2rem!important;
     width: 4rem!important;
-    font-size: .6rem;
+    font-size: .6rem!important;
   }
   .sign-out-collapse{
     margin-top: .7rem;
@@ -173,7 +173,7 @@ border: 1px solid black!important;
     margin-top: .7rem;
     height: 2rem!important;
     width: 9rem!important;
-    font-size: .6rem;
+    font-size: .6rem!important;
     
   }
 }
@@ -192,10 +192,10 @@ border: 1px solid black!important;
     /* position: absolute!important; */
     /* align-self: center!important; */
     /* margin-bottom: 18rem!important; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 3rem;
+    display: flex!important;
+    flex-direction: column!important;
+    align-items: center!important;
+    margin-top: 3rem!important;
   }
   .find-your-day{
     font-size: 1.5rem!important;
@@ -484,7 +484,7 @@ margin-left: 1rem!important;
   height: 2.1rem!important;
   display: flex!important;
   justify-content: space-between!important;
-  line-height: 2rem;
+  line-height: 2rem!important;
   overflow: auto!important;
 }
 
@@ -616,11 +616,11 @@ margin-left: 1rem!important;
 
 /* Day Card New*/
 .day-card{
-  background-color: #fffcf2;
+  background-color: #fffcf2!important;
   display: flex!important;
   width: 727px!important;
   margin: 8px!important;
-  justify-items: center;
+  justify-items: center!important;
 }
 
 .day-card-top{
@@ -640,8 +640,8 @@ margin-left: 1rem!important;
   max-width: 375px!important; 
   object-fit: cover!important;
   object-position: center!important;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: auto!important;
+  margin-left: auto!important;
 }
 .carousel-inner{
   width: auto!important;
@@ -653,10 +653,10 @@ margin-left: 1rem!important;
   width: 45%!important;
 }
 .carousel-control-next-icon{
-  display: none;
+  display: none!important;
 }
 .carousel-control-prev-icon{
-  display: none;
+  display: none!important;
 }
 
 .day-card-head{
@@ -709,7 +709,7 @@ margin-left: 1rem!important;
   align-self: center!important;
   width: 50%!important;
   padding-right: 1.5rem!important;
-  margin-bottom: .5rem;
+  margin-bottom: .5rem!important;
 }
 
 
@@ -747,8 +747,8 @@ margin-left: 1rem!important;
   max-height: 600px!important;
   width: auto!important;
   object-fit: cover!important;
-  margin-left:auto;
-  margin-right: auto;
+  margin-left:auto!important;
+  margin-right: auto!important;
 }
 @media all and (max-width: 500px) {
   .event-page-images{
