--- a/styles/globals.css
+++ b/styles/globals.css
@@ -270,6 +270,7 @@ margin-left: 1rem!important;
 /*Profile*/
 
 .user-Profile-Card{
+  background-color: #fffcf2!important;
   display: flex!important;
   justify-content: space-between!important;
   flex-direction: row!important;
